--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
         "react"
     ],
     "rules": {
+        "react/display-name": ['off'],
         "react/prop-types": ['off'],
         "indent": ["error", 2, { "SwitchCase": 1 }],
         "quotes": ["error", "single"],
